--- a/src/main/java/vista/Docentes.fxml
+++ b/src/main/java/vista/Docentes.fxml
@@ -10,135 +10,192 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <bottom>
-      <GridPane BorderPane.alignment="CENTER">
+<VBox maxWidth="600.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <GridPane VBox.vgrow="NEVER">
         <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="613.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="NEVER" maxWidth="95.0" minWidth="95.0" prefWidth="95.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="NEVER" maxWidth="95.0" minWidth="95.0" prefWidth="95.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="228.0" minWidth="83.0" prefWidth="137.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="600.0" prefWidth="663.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="35.0" vgrow="NEVER" />
+          <RowConstraints minHeight="35.0" vgrow="NEVER" />
+            <RowConstraints minHeight="35.0" prefHeight="30.0" vgrow="NEVER" />
         </rowConstraints>
          <children>
-            <Label contentDisplay="CENTER" text="01/01/2018" GridPane.columnIndex="1" />
-            <Label text="00:00 a.m." GridPane.columnIndex="2" />
-            <Label text="Mensajes dirigidos al usuario">
+            <Label text="Legajo" GridPane.halignment="RIGHT" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-         </children>
-      </GridPane>
-   </bottom>
-   <top>
-      <MenuBar opacity="0.5" BorderPane.alignment="CENTER">
-         <menus>
-            <Menu mnemonicParsing="false" text="Archivo">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Configuración general" />
-                  <MenuItem mnemonicParsing="false" text="Configurar impresora" />
-                  <MenuItem mnemonicParsing="false" text="Configurar estación de trabajo" />
-                  <Menu mnemonicParsing="false" text="Opciones de Administración">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Administrar grupos de Usuarios" />
-                        <MenuItem mnemonicParsing="false" text="Administrar Usuarios" />
-                     </items>
-                  </Menu>
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Acerca de ..." />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Salir" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Auxiliares">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Estado de los cargos" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Tipos de documentos" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Docencia">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Docentes (RRHH)" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Programas de investigación" />
-                  <MenuItem mnemonicParsing="false" text="Proyectos de investigación" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Informes" />
-         </menus>
-      </MenuBar>
-   </top>
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <MenuBar>
-               <menus>
-                  <Menu mnemonicParsing="false" text="Nuevo" />
-                  <Menu mnemonicParsing="false" text="Modificar" />
-                  <Menu mnemonicParsing="false" text="Eliminar" />
-                  <Menu mnemonicParsing="false" text="Buscar" />
-                  <Menu mnemonicParsing="false" text="Imprimir" />
-               </menus>
-            </MenuBar>
-            <GridPane>
+            <Label text="Apellido y Nombre" GridPane.halignment="RIGHT" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <TextField editable="false" maxWidth="100.0" minWidth="100.0" prefHeight="31.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </TextField>
+            <TextField editable="false" maxWidth="1.7976931348623157E308" prefHeight="31.0" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </TextField>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
-                <ColumnConstraints hgrow="NEVER" maxWidth="228.0" minWidth="83.0" prefWidth="137.0" />
-                  <ColumnConstraints hgrow="ALWAYS" minWidth="600.0" prefWidth="663.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Legajo" GridPane.halignment="RIGHT" GridPane.hgrow="NEVER" GridPane.valignment="CENTER">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </Label>
-                  <Label text="Apellido y Nombre" GridPane.halignment="RIGHT" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </Label>
-                  <TextField editable="false" maxWidth="100.0" minWidth="100.0" prefHeight="31.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER">
-                     <GridPane.margin>
-                        <Insets left="10.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField editable="false" maxWidth="1.7976931348623157E308" prefHeight="31.0" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1">
+                  <Button contentDisplay="CENTER" defaultButton="true" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" text="Buscar" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
-                  </TextField>
+                  </Button>
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" text="Eliminar" GridPane.columnIndex="3">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
                </children>
-               <padding>
-                  <Insets bottom="10.0" top="10.0" />
-               </padding>
             </GridPane>
-            <TabPane maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="606.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab text="Datos" />
-                <Tab text="Cargos">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-                  <Tab text="Ficha de investigación">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                  </Tab>
-                  <Tab text="Incentivos">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                  </Tab>
-              </tabs>
-            </TabPane>
          </children>
-      </VBox>
-   </center>
-</BorderPane>
+         <padding>
+            <Insets bottom="10.0" top="10.0" />
+         </padding>
+      </GridPane>
+      <TabPane tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+        <tabs>
+            <Tab text="Datos" />
+          <Tab text="Cargos">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                     <top>
+                        <GridPane BorderPane.alignment="CENTER">
+                           <children>
+                              <Button contentDisplay="CENTER" defaultButton="true" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" text="Guardar" GridPane.columnIndex="3">
+                                 <GridPane.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" text="Descartar" GridPane.columnIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" text="Eliminar" GridPane.columnIndex="4">
+                                 <GridPane.margin>
+                                    <Insets left="10.0" right="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                           </children>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <BorderPane.margin>
+                              <Insets top="10.0" />
+                           </BorderPane.margin>
+                        </GridPane>
+                     </top>
+                     <center>
+                        <ScrollPane prefViewportHeight="187.0" prefViewportWidth="780.0">
+                           <content>
+                              <TableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="166.0" prefWidth="778.0" BorderPane.alignment="CENTER">
+                                <columns>
+                                  <TableColumn text="C1" />
+                                  <TableColumn text="C2" />
+                                </columns>
+                                 <BorderPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </BorderPane.margin>
+                              </TableView>
+                           </content>
+                           <BorderPane.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </BorderPane.margin>
+                        </ScrollPane>
+                     </center>
+                     <bottom>
+                        <GridPane vgap="5.0" BorderPane.alignment="CENTER">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <BorderPane.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </BorderPane.margin>
+                           <children>
+                              <Label text="Área" />
+                              <Label text="Tipo" GridPane.rowIndex="1" />
+                              <Label text="Disposición" GridPane.rowIndex="2" />
+                              <Label text="Desde" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                              <Label text="Hasta" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                              <DatePicker GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                              <DatePicker GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                              <TextField GridPane.columnIndex="1" GridPane.columnSpan="4" />
+                              <TextField GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="Último costo" GridPane.rowIndex="3" />
+                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label text="Fecha" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                              <DatePicker GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <DatePicker GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                              <DatePicker GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                              <Label text="Hasta" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                              <Label text="Desde" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                              <Label text="Resolución" GridPane.halignment="LEFT" GridPane.rowIndex="4" />
+                              <Button mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="5" GridPane.halignment="CENTER" />
+                              <Button mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                           </children>
+                        </GridPane>
+                     </bottom>
+                  </BorderPane>
+               </content>
+          </Tab>
+            <Tab text="Ficha de investigación" />
+            <Tab text="Incentivos" />
+        </tabs>
+      </TabPane>
+      <GridPane alignment="BOTTOM_LEFT" disable="true" minHeight="0.0" minWidth="25.0" prefHeight="0.0" prefWidth="800.0" VBox.vgrow="NEVER">
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="NEVER" />
+        </rowConstraints>
+      </GridPane>
+   </children>
+</VBox>
