--- a/src/main/java/vista/Usuarios.fxml
+++ b/src/main/java/vista/Usuarios.fxml
@@ -4,13 +4,18 @@
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?scenebuilder-stylesheet Style.css?>
 
-
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="480.0" prefWidth="640.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <VBox>
          <children>
-            <GridPane alignment="CENTER">
+            <Label styleClass="label-border" text="Información del usuario">
+               <VBox.margin>
+                  <Insets left="10.0" />
+               </VBox.margin>
+            </Label>
+            <GridPane alignment="CENTER" styleClass="pane-border">
               <columnConstraints>
                 <ColumnConstraints hgrow="NEVER" />
                 <ColumnConstraints minWidth="10.0" prefWidth="200.0" />
@@ -18,16 +23,16 @@
                   <ColumnConstraints minWidth="10.0" prefWidth="200.0" />
               </columnConstraints>
               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label layoutX="199.0" layoutY="47.0" text="Documento">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
                   <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
@@ -37,20 +42,20 @@
                      </GridPane.margin>
                   </Label>
                   <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3" />
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar Persona" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar persona" textOverrun="CLIP" GridPane.columnIndex="3" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
                   <Label text="Usuario" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
                   <TextField promptText="Ingrese el nombre de usuario" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <Label text="Contraseña" GridPane.rowIndex="3">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
                   <PasswordField promptText="Ingrese la contraseña" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -62,22 +67,120 @@
                   <PasswordField promptText="Confirme la contraseña" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                   <Label text="Descripción" GridPane.rowIndex="4">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
                   <TextField promptText="Ingrese una descripción para el usuario" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
                </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </GridPane>
             <GridPane>
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <children>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar usuario" textOverrun="CLIP" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo usuario" textOverrun="CLIP" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar usuario" textOverrun="CLIP" GridPane.columnIndex="3">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+               </children>
+            </GridPane>
+            <GridPane>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <VBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </VBox.margin>
+               <children>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" textOverrun="CLIP" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" textOverrun="CLIP" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+               </children>
+            </GridPane>
+            <Label styleClass="label-border" text="Roles del usuario">
+               <VBox.margin>
+                  <Insets left="10.0" />
+               </VBox.margin>
+            </Label>
+            <GridPane styleClass="pane-border" VBox.vgrow="ALWAYS">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="30.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="30.0" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="30.0" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="30.0" />
+                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="30.0" />
+              </rowConstraints>
+               <children>
+                  <TableView GridPane.rowSpan="2147483647">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="Roles disponibles" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <Button ellipsisString="" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="button-agregar" text="Agregar &gt;&gt;" textOverrun="LEADING_WORD_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button ellipsisString="" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="button-quitar" text="&lt;&lt; Quitar" textOverrun="WORD_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <TableView GridPane.columnIndex="2" GridPane.rowSpan="2147483647">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <columns>
+                        <TableColumn prefWidth="75.0" text="Roles del usuario" />
+                     </columns>
+                  </TableView>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </GridPane>
          </children>
          <padding>
