--- a/src/main/java/vista/Programas.fxml
+++ b/src/main/java/vista/Programas.fxml
@@ -50,17 +50,17 @@
       </GridPane>
       <GridPane alignment="BOTTOM_LEFT">
          <children>
-            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar" GridPane.columnIndex="1">
+            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar" textOverrun="CLIP" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="2">
+            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" textOverrun="CLIP" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar" GridPane.columnIndex="3">
+            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar" textOverrun="CLIP" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -83,7 +83,7 @@
          <content>
             <VBox>
                <children>
-                  <Label styleClass="label-border" text="Datos">
+                  <Label styleClass="label-border" text="Información del programa">
                      <VBox.margin>
                         <Insets left="10.0" top="10.0" />
                      </VBox.margin>
@@ -92,12 +92,12 @@
                      <top>
                         <GridPane BorderPane.alignment="CENTER">
                            <children>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarCargo" text="Guardar" GridPane.columnIndex="1">
+                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarCargo" text="Guardar" textOverrun="CLIP" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar" GridPane.columnIndex="2">
+                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar" textOverrun="CLIP" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
@@ -126,7 +126,7 @@
       	                                    </GridPane.margin>
       	                                 </Label>
       	                                 <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
-      	                                 <Button mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2">
+      	                                 <Button mnemonicParsing="false" text="Seleccionar" textOverrun="CLIP" GridPane.columnIndex="2">
       	                                    <GridPane.margin>
       	                                       <Insets left="10.0" />
       	                                    </GridPane.margin>
@@ -137,7 +137,7 @@
       	                                    </GridPane.margin>
       	                                 </Label>
       	                                 <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      	                                 <Button mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      	                                 <Button mnemonicParsing="false" text="Seleccionar" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="1">
       	                                    <GridPane.margin>
       	                                       <Insets left="10.0" />
       	                                    </GridPane.margin>
@@ -202,12 +202,12 @@
                      <top>
                         <GridPane BorderPane.alignment="CENTER">
                            <children>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarCargo" text="Agregar" GridPane.columnIndex="1">
+                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarCargo" text="Agregar" textOverrun="CLIP" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar" GridPane.columnIndex="2">
+                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar" textOverrun="CLIP" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
