--- a/src/main/java/vista/Informes.fxml
+++ b/src/main/java/vista/Informes.fxml
@@ -11,6 +11,7 @@
       <GridPane>
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="400.0" />
+            <ColumnConstraints />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="NEVER" />
@@ -42,6 +43,11 @@
                            </GridPane.margin>
                         </Button>
                         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Exportar a Excel" GridPane.columnIndex="3">
+                           <GridPane.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Volver a la lista">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
