Terminada Vista Búsqueda

--- a/src/main/java/vista/Busqueda.fxml
+++ b/src/main/java/vista/Busqueda.fxml
@@ -9,13 +9,13 @@
 <GridPane prefHeight="300.0" prefWidth="600.0" stylesheets="@Style.css" vgap="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" prefWidth="100.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
       <RowConstraints minHeight="-Infinity" prefHeight="200.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
    </rowConstraints>
    <children>
       <TextField promptText="Ingrese el criterio de búsqueda" GridPane.columnSpan="2147483647">
@@ -26,17 +26,17 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </TextField>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </Button>
-      <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
         <columns>
           <TableColumn prefWidth="75.0" text="Columna 1" />
           <TableColumn prefWidth="75.0" text="Columna 2" />
