--- a/src/main/java/vista/interfaces/Roles.fxml
+++ b/src/main/java/vista/interfaces/Roles.fxml
@@ -6,10 +6,17 @@
 <?import javafx.scene.control.*?>
 <?scenebuilder-stylesheet Style.css?>
 
-
 <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="480.0" prefWidth="640.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <VBox prefHeight="200.0" prefWidth="100.0">
+      <GridPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="450.0" vgap="10.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <GridPane vgap="5.0">
               <columnConstraints>
@@ -19,8 +26,8 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
                   <Label text="ID">
@@ -45,55 +52,64 @@
                <VBox.margin>
                   <Insets left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </GridPane>
-            <GridPane>
+            <GridPane hgap="20.0" GridPane.rowIndex="1">
               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo rol">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo rol" GridPane.columnIndex="1">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="2">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="3">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar rol" GridPane.columnIndex="3">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar rol" GridPane.columnIndex="4">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar rol">
+                     <GridPane.margin>
+                        <Insets />
                      </GridPane.margin>
                   </Button>
                </children>
                <VBox.margin>
-                  <Insets bottom="10.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </GridPane>
-            <GridPane>
+            <GridPane GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="NEVER" />
                 <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label styleClass="label-border" text="Permisos">
                      <GridPane.margin>
-                        <Insets left="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Label>
                   <GridPane styleClass="pane-border" GridPane.rowIndex="1">
@@ -121,6 +137,9 @@
                </children>
             </GridPane>
          </children>
-      </VBox>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </GridPane>
    </content>
 </ScrollPane>
